[project]
name = "events-timeline"
version = "0.1.0"
description = "A utility that ingests reports from various text-based raw-data formats such as logs, processes them, and returns a summary of the report"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "termcolor>=3.2.0",
]

[tool.uv]
package = true

# [tool.uv.sources]
# where = ["src"]

[project.scripts]
events-timeline = "events_timeline.main:main"

